Adding more ideas , object oriented design

--- a/src/main/webapp/SiteToDo.html
+++ b/src/main/webapp/SiteToDo.html
@@ -11,7 +11,7 @@
            Domain name buying
        </li>
        <li>
-           Hosting on AWS
+           Hosting on AWS with CI
        </li>
        <li>
            Google Analytics
@@ -28,8 +28,17 @@
          <li> Cheat Sheets for Interview </li>
         <li> Github code for easy access</li>
         <li> Easier way to run some code for user</li>
+        <li> Donate button</li>
+        <li> Integrating payment </li>
 
     </ul>
+
+    Non functional Requirements
+<ul>
+    <li> Amazon server cost basis for continuous</li>
+    <li> Researching Good domain name </li>
+    <li> </li>
+</ul>
 
 
 </body>
