Created folder for design patterns

--- a/src/main/webapp/Algorithms.html
+++ b/src/main/webapp/Algorithms.html
@@ -10,13 +10,34 @@ Priority Queues
   <ul>
       <li> Elementary implementations</li>
       <li> Binary Heap </li>
-      <li> Binary Heap Sort</li>
+      <li> Binary Heap Sort</li>¡
       <li> 8-k puzzle </li>
       <li> Simulation of colliding particles</li>
 
   </ul>
 
+<p>
 Symbol Tables
+
+    key value pairs
+    Comparable key symbol table ,
+    equals hashcode
+Associate array abstraction ( no multiple keys for same symbol table key)
+
+Elementary implementations
+linked list, find and replace
+
+
+parallel array
+
+Binary Search (ordered array)
+
+Ordered Operations  floor,
+
+Binary Search Trees
+
+    Balanced Search tree vs
+</p>
 
 
 Union Find Algorthms
@@ -24,6 +45,11 @@ Union Find Algorthms
 
 Sorting Algorithms
 
+Running huerestics of hash table in object
+
+Nand to tetris ... Hard ware to software segregration
+
+Having markatable skills and
 
 
 
