--- a/src/main/webapp/AmericanAccent.html
+++ b/src/main/webapp/AmericanAccent.html
@@ -17,6 +17,11 @@ Sounds of A
     <li> Oy sound correction</li>
     <li> Ordering in starbucks or restarants</li>
     <li> Syllable break down </li>
+
+
+    alpha class
+
+
 </ul>
 IPA
 
