--- a/src/main/webapp/NetorkingProtocol.html
+++ b/src/main/webapp/NetorkingProtocol.html
@@ -13,7 +13,14 @@
     <li>Ceritifciates</li>
     <li>Public key encryption</li>
     <li> SSL handshake end to end </li>
+    <li> What is ssh and sshfingerprint  public key</li>
 </ul>
+
+Character encoding
+Url encoding
+Java dataypes
+Encryption
+
 
 </body>
 </html>
