--- a/src/main/webapp/Stocks.html
+++ b/src/main/webapp/Stocks.html
@@ -36,8 +36,15 @@ My RH account should have been touching 50k by now if option trading was not int
 <br/>
 Mistakes of life
 <ul>
+    <li> Wasting money on food by continuously eating outside 800 $ a month</li>
+    <li> Buying gifts like laptop when as a student 2k$ </li>
+    <li> Buying expensive desktop system which is waste 1k$</li>
+    <li> Going california for surgery wasted 25k $ </li>
+    <li> Going boston for javapassion training 5k $ </li>
+    <li> Going newyork for new year eve 3k $ </li>
+    <li> Helping people 2k$ amanda, 600$ anil phd</li>
     <li> Sending money to india 10k 2014,parents 2016  and 15k to Ravi business. A 25k opportunity cost if invested in amzn fml</li>
-    <li> Buying a sports car </li>
+    <li> Buying a sports car  50k$ </li>
     <li> HMNY mistake buying at 35 and selling at 18 , 1500 loss in ameritrade</li>
     <li> Crypto mistake of not timing the bitcoin sellling and paying hefty taxes</li>
     <li> BA 04/20 costed 10k </li>
@@ -46,6 +53,7 @@ Mistakes of life
 </ul>
 
 
+1000 $ challenge , convert 1000 to 2000 $
 
 
 
