--- a/src/main/webapp/SiteToDo.html
+++ b/src/main/webapp/SiteToDo.html
@@ -24,6 +24,7 @@
 
     Functional Requirements
     <ul>
+        <li> Site navigation using bootsrap or cool front end </li>
          <li>Mobile phone friendly app </li>
          <li> Cheat Sheets for Interview </li>
         <li> Github code for easy access</li>
