Created folder for design patterns

--- a/src/main/webapp/Algorithms.html
+++ b/src/main/webapp/Algorithms.html
@@ -40,7 +40,15 @@ Binary Search Trees
 </p>
 
 
-Union Find Algorthms
+Union Find Algorithms
+
+BST (binary Search Tree)
+Balanced Search tree
+2-3 balanced search tree
+red -black treee
+
+
+
 
 
 Sorting Algorithms
