minor changes and hyperlinking design patterns

--- a/src/main/webapp/Algorithms.html
+++ b/src/main/webapp/Algorithms.html
@@ -10,7 +10,7 @@ Priority Queues
   <ul>
       <li> Elementary implementations</li>
       <li> Binary Heap </li>
-      <li> Binary Heap Sort</li>¡
+      <li> Binary Heap Sort</li>
       <li> 8-k puzzle </li>
       <li> Simulation of colliding particles</li>
 
