--- a/src/main/webapp/Crossfit.html
+++ b/src/main/webapp/Crossfit.html
@@ -9,6 +9,8 @@
 <ul>
     <li>Dead lift max 335 #</li> Video link for it 
     <li>Clean Jerk 160 #</li> video link for it
+    <li>Double unders </li>
+    <li>Hand stand walk</li>
 
 </ul>
 
