--- a/src/main/webapp/DesignPatterns/DesignPatterns.html
+++ b/src/main/webapp/DesignPatterns/DesignPatterns.html
@@ -9,7 +9,7 @@
 <p>
    Solutions for common object Oriented Problems.
    Provides easy jargon for developers
-    23 True GOF patterns Catalogue.  Link to Elements of reusable desing patterns
+    23 True GOF patterns Catalogue.  Link to Elements of reusable
 
 </p>
 
