--- a/src/main/webapp/ObjectOrientedDesign.html
+++ b/src/main/webapp/ObjectOrientedDesign.html
@@ -11,7 +11,7 @@
     <li> Design a chess board </li>
 </ul>
 
-Book to read uncle bob uml distlled.
+Book to read uncle bob uml distilled.
 
 
 </body>
