--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,7 +10,8 @@
 <ul>
 
     <li><a href="Algorithms.html"> Algorithms</a></li>
-    <li><a href="DesignPatterns.html">DesignPatterns </a></li>
+    <li><a href="DesignPatterns\DesignPatterns.html">Design Patterns </a></li>
+    <li> <a href="EffectiveJava.html">Effective Java</a></li>
 
 </ul>
 
