--- a/src/main/webapp/NetorkingProtocol.html
+++ b/src/main/webapp/NetorkingProtocol.html
@@ -8,17 +8,17 @@
 
 <ul>
 
-    <li> All about https </li>
-    <li> SSL Engine </li>
-    <li>Ceritifciates</li>
+    <li>All about https</li>
+    <li>SSL Engine</li>
+    <li>Certificates</li>
     <li>Public key encryption</li>
-    <li> SSL handshake end to end </li>
-    <li> What is ssh and sshfingerprint  public key</li>
+    <li>SSL handshake end to end</li>
+    <li>What is ssh and ssh fingerprint public key</li>
 </ul>
 
 Character encoding
 Url encoding
-Java dataypes
+Java datatypes
 Encryption
 
 
