Fixing links for design patterns

--- a/src/main/webapp/DesignPatterns/DesignPatterns.html
+++ b/src/main/webapp/DesignPatterns/DesignPatterns.html
@@ -7,36 +7,31 @@
 <body>
 
 <p>
-   Solutions for common object Oriented Problems.
-   Provides easy jargon for developers
-    23 True GOF patterns Catalogue.  Link to Elements of reusable
+    Solutions for common object Oriented Problems.
+    Provides easy jargon for developers
+    23 True GOF patterns Catalogue. Link to Elements of reusable
 
 </p>
 
-   <ul>
-       <li>
-           Strategy Pattern <br/>
-            Duck simulation problem
-       </li>
-       <li>
-           Adapter Pattern <br/>
-            Turkey Duck adapter
-       </li>
-       <li>
-           Observer Pattern <br/>
-           Weather O station
-       </li>
-       <li>
-           Iterator Pattern <br/>
-           Pancake and lunch place
-       </li>
-       <li>
-           Decorator Pattern <br/>
-           Star Bucks Problem
-       </li>
+<ul>
+    <li>
+        <a href="StrategyPattern.html">Strategy Pattern </a><br/>
+    </li>
+    <li>
+        <a href="AdapterPattern.html">Adapter Pattern </a> <br/>
+    </li>
+    <li>
+        Observer Pattern <br/>
+    </li>
+    <li>
+        <a href="IteratorPattern.html">Iterator Pattern </a> <br/>
+    </li>
+    <li>
+        <a href="DecoratorPattern.html">Decorator Pattern</a> <br/>
+    </li>
 
 
-   </ul>
+</ul>
 
 </body>
 </html>
