Fixing links for design patterns

--- a/src/main/webapp/DesignPatterns/DesignPatterns.html
+++ b/src/main/webapp/DesignPatterns/DesignPatterns.html
@@ -15,19 +15,19 @@
 
 <ul>
     <li>
-        <a href="StrategyPattern.html">Strategy Pattern </a><br/>
+        <a href="StrategyPattern.html">Strategy Pattern </a>
     </li>
     <li>
-        <a href="AdapterPattern.html">Adapter Pattern </a> <br/>
+        <a href="AdapterPattern.html">Adapter Pattern </a>
     </li>
     <li>
         Observer Pattern <br/>
     </li>
     <li>
-        <a href="IteratorPattern.html">Iterator Pattern </a> <br/>
+        <a href="IteratorPattern.html">Iterator Pattern </a>
     </li>
     <li>
-        <a href="DecoratorPattern.html">Decorator Pattern</a> <br/>
+        <a href="DecoratorPattern.html">Decorator Pattern</a>
     </li>
 
 
