Fixing links for design patterns

--- a/src/main/webapp/DesignPatterns/DesignPatterns.html
+++ b/src/main/webapp/DesignPatterns/DesignPatterns.html
@@ -21,7 +21,7 @@
         <a href="AdapterPattern.html">Adapter Pattern </a>
     </li>
     <li>
-        Observer Pattern <br/>
+        Observer Pattern
     </li>
     <li>
         <a href="IteratorPattern.html">Iterator Pattern </a>
