--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,9 +9,10 @@
 
 <ul>
 
-    <li><a href="Algorithms.html"> Algorithms</a></li>
-    <li><a href="DesignPatterns\DesignPatterns.html">Design Patterns </a></li>
-    <li> <a href="EffectiveJava.html">Effective Java</a></li>
+    <li><a href="Algorithms/Algorithms.html"> Algorithms</a></li>
+    <li><a href="DesignPatterns/DesignPatterns.html">Design Patterns</a></li>
+    <li><a href="EffectiveJava/EffectiveJava.html">Effective Java</a></li>
+    <li><a href="CodeSmells/CodeSmells.html">Code Smells</a></li>
 
 </ul>
 
