--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,6 +13,7 @@
     <li><a href="DesignPatterns/DesignPatterns.html">Design Patterns</a></li>
     <li><a href="EffectiveJava/EffectiveJava.html">Effective Java</a></li>
     <li><a href="CodeSmells/CodeSmells.html">Code Smells</a></li>
+    <li><a href="Databases/Databases.html">Databases</a></li>
 
 </ul>
 
