Fixing links for design patterns

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,6 +14,7 @@
     <li><a href="EffectiveJava/EffectiveJava.html">Effective Java</a></li>
     <li><a href="CodeSmells/CodeSmells.html">Code Smells</a></li>
     <li><a href="Databases/Databases.html">Databases</a></li>
+    <li><a href="CleanCode/CleanCode.html">Clean Code</a></li>
 
 </ul>
 
