Fixing links for design patterns

--- a/src/main/webapp/Algorithms/Searching.html
+++ b/src/main/webapp/Algorithms/Searching.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-Used for searching
+Used for searching ,Symbol table API
 
 <ul>
 
@@ -14,7 +14,7 @@ Used for searching
         Binary Search Tree
     </li>
     <li>
-        Balanced Search Tree  2-3 tree
+        Balanced Search Tree 2-3 tree
     </li>
     <li>
         Red Black tree
