--- a/src/main/webapp/DesignPatterns/DesignPatterns.html
+++ b/src/main/webapp/DesignPatterns/DesignPatterns.html
@@ -30,6 +30,18 @@
         <a href="DecoratorPattern.html">Decorator Pattern</a>
     </li>
 
+    <li>
+        <a href="CompositePattern.html">Composite Pattern</a>
+    </li>
+    <li>
+        <a href="Singleton.html">Singleteon Pattern</a>
+    </li>
+    <li>
+        <a href="StatePattern.html">State Pattern</a>
+    </li>
+
+
+
 
 </ul>
 
