--- a/src/main/webapp/SiteToDo.html
+++ b/src/main/webapp/SiteToDo.html
@@ -6,39 +6,39 @@
 </head>
 <body>
 
-   <ul>
-       <li>
-           Domain name buying
-       </li>
-       <li>
-           Hosting on AWS with CI
-       </li>
-       <li>
-           Google Analytics
-       </li>
-       <li>
-           Amazon seller account redirecting Product references
-       </li>
+<ul>
+    <li>
+        Domain name buying
+    </li>
+    <li>
+        Hosting on AWS with CI
+    </li>
+    <li>
+        Google Analytics
+    </li>
+    <li>
+        Amazon seller account redirecting Product references
+    </li>
 
-   </ul>
+</ul>
 
-    Functional Requirements
-    <ul>
-        <li> Site navigation using bootsrap or cool front end </li>
-         <li>Mobile phone friendly app </li>
-         <li> Cheat Sheets for Interview </li>
-        <li> Github code for easy access</li>
-        <li> Easier way to run some code for user</li>
-        <li> Donate button</li>
-        <li> Integrating payment </li>
+Functional Requirements
+<ul>
+    <li> Navigation menu using bootsrap or cool front end</li>
+    <li>Mobile phone friendly app</li>
+    <li> Cheat Sheets for Interview</li>
+    <li> Github code for easy access</li>
+    <li> Easier way to run some code for user</li>
+    <li> Donate button</li>
+    <li> Integrating payment</li>
 
-    </ul>
+</ul>
 
-    Non functional Requirements
+Non functional Requirements
 <ul>
     <li> Amazon server cost basis for continuous</li>
-    <li> Researching Good domain name </li>
-    <li> </li>
+    <li> Researching Good domain name</li>
+    <li></li>
 </ul>
 
 
