--- a/src/main/webapp/Algorithms/Algorithms.html
+++ b/src/main/webapp/Algorithms/Algorithms.html
@@ -7,9 +7,8 @@
 <body>
 
 <ul>
-    <li><a href="SymbolTable.html">SymbolTable</a></li>
-    <li> 8-k puzzle</li>
-    <li> Simulation of colliding particles</li>
+    <li><a href="Searching.html">Searching</a></li>
+    <li><a href="Sorting.html">Sorting Algorithms</a></li>
 
 </ul>
 
