Fixing links for design patterns

--- a/src/main/webapp/CodeSmells/CodeSmells.html
+++ b/src/main/webapp/CodeSmells/CodeSmells.html
@@ -5,6 +5,10 @@
     <title>Code Smells</title>
 </head>
 <body>
+<ul>
+    <li><a href="MagicNumber.html">Replace Magic Number with Symbolic Constant</a></li>
+
+</ul>
 
 </body>
 </html>
