--- a/src/main/webapp/EffectiveJava/EffectiveJava.html
+++ b/src/main/webapp/EffectiveJava/EffectiveJava.html
@@ -6,22 +6,16 @@
 </head>
 <body>
 
-Static constructor
-Service Provider Pattern involving JDBC , Device Driver and Connection, DriverManager classes
 
 <br/>
-Immutability of Object Recipe
- <ul>
-     <li> final class   </li>
-     <li> No setter methods</li>
-     <li> If you have mutable elements , defencive copy in constructor</li>
- </ul>
+<ul>
+    <li><a href="serviceProviderPattern.html">Service Provider Pattern</a></li>
+    <li><a href="MinimizeMutability.html">Minimize Mutability</a></li>
+</ul>
 
 <br/>
 
 link for Joshua block on generics
-
-
 
 
 </body>
