--- a/src/main/webapp/SiteToDo.html
+++ b/src/main/webapp/SiteToDo.html
@@ -24,13 +24,14 @@
 
 Functional Requirements
 <ul>
-    <li> Navigation menu using bootsrap or cool front end</li>
-    <li>Mobile phone friendly app</li>
+    <li> Navigation menu using bootstrap or cool front end</li>
+    <li> Mobile phone friendly app</li>
     <li> Cheat Sheets for Interview</li>
     <li> Github code for easy access</li>
     <li> Easier way to run some code for user</li>
     <li> Donate button</li>
     <li> Integrating payment</li>
+    <li> Good images to describer icons , refactoring guru example</li>
 
 </ul>
 
