--- a/src/main/webapp/ObjectOrientedDesign.html
+++ b/src/main/webapp/ObjectOrientedDesign.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Object Oriented Desing problems</title>
+    <title>Object Oriented Designing problems</title>
 </head>
 <body>
 
 <ul>
-    <li> Design a  vending machine </li>
-    <li> Design a chess board </li>
+    <li> Design a vending machine</li>
+    <li> Design a chess board</li>
 </ul>
 
 Book to read uncle bob uml distilled.
