--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,18 +7,16 @@
 
 <body>
 
-<ul>
-
-    <li><a href="Algorithms/Algorithms.html">Algorithms</a></li>
-    <li><a href="DesignPatterns/DesignPatterns.html">Design Patterns</a></li>
-    <li><a href="EffectiveJava/EffectiveJava.html">Effective Java</a></li>
-    <li><a href="CleanCode/CleanCode.html">Clean Code</a></li>
-    <li><a href="Databases/Databases.html">Databases</a></li>
-    <li><a href="CodeSmells/CodeSmells.html">Code Smells</a></li>
-
-</ul>
-
-
+<nav>
+    <ul>
+        <li><a href="Algorithms/Algorithms.html">Algorithms</a></li>
+        <li><a href="DesignPatterns/DesignPatterns.html">Design Patterns</a></li>
+        <li><a href="EffectiveJava/EffectiveJava.html">Effective Java</a></li>
+        <li><a href="CleanCode/CleanCode.html">Clean Code</a></li>
+        <li><a href="Databases/Databases.html">Databases</a></li>
+        <li><a href="CodeSmells/CodeSmells.html">Code Smells</a></li>
+    </ul>
+</nav>
 
 
 </body>
