--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,13 +2,15 @@
 
 
 <head>
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
 <body>
 
-<nav>
-    <ul>
+<nav class="navbar navbar-default">
+    <ul class="nav navbar-nav">
         <li><a href="Algorithms/Algorithms.html">Algorithms</a></li>
         <li><a href="DesignPatterns/DesignPatterns.html">Design Patterns</a></li>
         <li><a href="EffectiveJava/EffectiveJava.html">Effective Java</a></li>
