--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,22 +2,30 @@
 
 
 <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+          crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
 </head>
 
 <body>
 
-<nav class="navbar navbar-default">
-    <ul class="nav navbar-nav">
-        <li><a href="Algorithms/Algorithms.html">Algorithms</a></li>
-        <li><a href="DesignPatterns/DesignPatterns.html">Design Patterns</a></li>
-        <li><a href="EffectiveJava/EffectiveJava.html">Effective Java</a></li>
-        <li><a href="CleanCode/CleanCode.html">Clean Code</a></li>
-        <li><a href="Databases/Databases.html">Databases</a></li>
-        <li><a href="CodeSmells/CodeSmells.html">Code Smells</a></li>
-    </ul>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active"><a  class="nav-link" href="Algorithms/Algorithms.html">Algorithms </a></li>
+            <li class="nav-item active"><a class="nav-link" href="DesignPatterns/DesignPatterns.html">Design Patterns </a></li>
+            <li class="nav-item active"><a class="nav-link" href="EffectiveJava/EffectiveJava.html">Effective Java </a></li>
+            <li class="nav-item active"><a class="nav-link" href="CleanCode/CleanCode.html">Clean Code </a></li>
+            <li class="nav-item active"><a class="nav-link" href="Databases/Databases.html">Databases </a></li>
+            <li class="nav-item active"><a class="nav-link" href="CodeSmells/CodeSmells.html">Code Smells </a></li>
+        </ul>
+    </div>
 </nav>
 
 
