--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,24 +9,17 @@
             crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
 </head>
 
 <body>
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active"><a  class="nav-link" href="Algorithms/Algorithms.html">Algorithms </a></li>
-            <li class="nav-item active"><a class="nav-link" href="DesignPatterns/DesignPatterns.html">Design Patterns </a></li>
-            <li class="nav-item active"><a class="nav-link" href="EffectiveJava/EffectiveJava.html">Effective Java </a></li>
-            <li class="nav-item active"><a class="nav-link" href="CleanCode/CleanCode.html">Clean Code </a></li>
-            <li class="nav-item active"><a class="nav-link" href="Databases/Databases.html">Databases </a></li>
-            <li class="nav-item active"><a class="nav-link" href="CodeSmells/CodeSmells.html">Code Smells </a></li>
-        </ul>
-    </div>
-</nav>
+<div id="nav-placeholder"></div>
+<script>
+    $(function(){
+        $("#nav-placeholder").load("nav.html");
+    });
+</script>
 
 
 </body>
