adding layout for the webpage.

--- a/src/main/webapp/DesignPatterns/DesignPatterns.html
+++ b/src/main/webapp/DesignPatterns/DesignPatterns.html
@@ -5,6 +5,7 @@
     <title>Design Patterns</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
+    <link rel="stylesheet" href="../site.css" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
             crossorigin="anonymous"></script>
@@ -15,52 +16,51 @@
 </head>
 <body>
 
-<body>
 <div id="nav-placeholder"></div>
 <script>
-    $(function(){
+    $(function () {
         $("#nav-placeholder").load("../nav.html");
     });
 </script>
+<article>
+    <br/>
+    <br/>
+    <p>
+        Solutions for common object Oriented Problems.
+        Provides easy jargon for developers
+        23 True GOF patterns Catalogue. Link to Elements of reusable
 
-<p>
-    Solutions for common object Oriented Problems.
-    Provides easy jargon for developers
-    23 True GOF patterns Catalogue. Link to Elements of reusable
+    </p>
 
-</p>
+    <ul>
+        <li>
+            <a href="StrategyPattern.html">Strategy Pattern </a>
+        </li>
+        <li>
+            <a href="AdapterPattern.html">Adapter Pattern </a>
+        </li>
+        <li>
+            Observer Pattern
+        </li>
+        <li>
+            <a href="IteratorPattern.html">Iterator Pattern </a>
+        </li>
+        <li>
+            <a href="DecoratorPattern.html">Decorator Pattern</a>
+        </li>
 
-<ul>
-    <li>
-        <a href="StrategyPattern.html">Strategy Pattern </a>
-    </li>
-    <li>
-        <a href="AdapterPattern.html">Adapter Pattern </a>
-    </li>
-    <li>
-        Observer Pattern
-    </li>
-    <li>
-        <a href="IteratorPattern.html">Iterator Pattern </a>
-    </li>
-    <li>
-        <a href="DecoratorPattern.html">Decorator Pattern</a>
-    </li>
-
-    <li>
-        <a href="CompositePattern.html">Composite Pattern</a>
-    </li>
-    <li>
-        <a href="Singleton.html">Singleteon Pattern</a>
-    </li>
-    <li>
-        <a href="StatePattern.html">State Pattern</a>
-    </li>
+        <li>
+            <a href="CompositePattern.html">Composite Pattern</a>
+        </li>
+        <li>
+            <a href="Singleton.html">Singleteon Pattern</a>
+        </li>
+        <li>
+            <a href="StatePattern.html">State Pattern</a>
+        </li>
 
 
-
-
-</ul>
-
+    </ul>
+</article>
 </body>
 </html>
