adding layout for the webpage.

--- a/src/main/webapp/DesignPatterns/StatePattern.html
+++ b/src/main/webapp/DesignPatterns/StatePattern.html
@@ -3,30 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <title>State Pattern</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="../site.css" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
 </head>
 <body>
+<div id="nav-placeholder"></div>
+<script>
+    $(function () {
+        $("#nav-placeholder").load("../nav.html");
+    });
+</script>
+<article>
 
 
+    Gumball machine
 
-Gumball machine
-
-class diagram similar to Strategy pattern
-
+    class diagram similar to Strategy pattern
 
 
+    why doesn't gum ball implement state?
 
-why doesn't gum ball implement state?
-
-Each state has reference to gum ball --> which is kind of different than strategy . why this information is not captured in class diagram ?
-
-
-Did anyonw build hardware + software implmentation of gum ball  like this ?
+    Each state has reference to gum ball --> which is kind of different than strategy . why this information is not captured in class diagram ?
 
 
-rasberry pie gum ball machine
+    Did anyonw build hardware + software implmentation of gum ball like this ?
 
 
-
+    rasberry pie gum ball machine
+</article>
 
 </body>
 </html>
