--- a/src/main/webapp/DesignPatterns/DecoratorPattern.html
+++ b/src/main/webapp/DesignPatterns/DecoratorPattern.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Singleton</title>
+    <title>Decorator</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
@@ -24,9 +24,9 @@
     });
 </script>
 <article>
-    lazy loading singleton
+    Adding dynamic behavior in runtime. Differentiate with inheritance
+    Class vs Object
 </article>
-
 
 </body>
 </html>
