adding layout for the webpage.

--- a/src/main/webapp/EffectiveJava/EffectiveJava.html
+++ b/src/main/webapp/EffectiveJava/EffectiveJava.html
@@ -25,7 +25,7 @@
 </script>
 <article>
     <ul>
-        <li><a href="serviceProviderPattern.html">Service Provider Pattern</a></li>
+        <li><a class="deco-none" href="serviceProviderPattern.html">Service Provider Pattern</a></li>
         <li><a href="MinimizeMutability.html">Minimize Mutability</a></li>
     </ul>
 
