--- a/src/main/webapp/nav.html
+++ b/src/main/webapp/nav.html
@@ -2,8 +2,8 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item "><a  class="nav-link" href="../Algorithms/Algorithms.html">Algorithms </a></li>
+        <ul class="navbar-nav ">
+            <li class="nav-item "><a class="nav-link" href="../Algorithms/Algorithms.html">Algorithms </a></li>
             <li class="nav-item "><a class="nav-link" href="../DesignPatterns/DesignPatterns.html">Design Patterns </a></li>
             <li class="nav-item "><a class="nav-link" href="../EffectiveJava/EffectiveJava.html">Effective Java </a></li>
             <li class="nav-item "><a class="nav-link" href="../CleanCode/CleanCode.html">Clean Code </a></li>
