--- a/src/main/webapp/DesignPatterns/DesignPatterns.html
+++ b/src/main/webapp/DesignPatterns/DesignPatterns.html
@@ -58,6 +58,11 @@
         </li>
 
 
+        <li>
+            <a href="FlyweightPattern.html">Flyweight Pattern</a>
+        </li>
+
+
     </ul>
 </article>
 </body>
