--- a/src/main/webapp/SiteToDo.html
+++ b/src/main/webapp/SiteToDo.html
@@ -8,6 +8,36 @@
 
 
 
+Wireframing and prototyping tools , xd adobe
+
+
+Books to read
+The code book
+Cracking the coding Interview
+Frontend developer  ,html +Css
+Design UX Ui
+Full stack developer,
+
+Commercial property with apartment building like west glen , if i have to put a number what would it be ?
+
+First generation of weatlth , net amount greater than 1 million
+
+Never borrow longterm  wiht prsopects of short term income
+
+if Adcii , type faces , how hard is to create a program like editor ,sublime with fonts
+
+Elon musk paypal coder to multi millionaire
+satyma nadella sold shares of msft and profitted 35 million
+
+Srikaran makes 5 $ on you for every hour and sanjeev will make 3 $ , hari 2$ ,they will become wealthy
+
+Finding spouse who is cheerful, good looking , young and aligned to me
+
+Removing things that control your life, employers , vendors, uscis, credit card lenders
+
+Nutrition , health choices and winning 60-day challenge
+
+
 
 </body>
 </html>
