--- a/src/main/webapp/DesignPatterns/DesignPatterns.html
+++ b/src/main/webapp/DesignPatterns/DesignPatterns.html
@@ -51,7 +51,7 @@
             <a href="CompositePattern.html">Composite Pattern</a>
         </li>
         <li>
-            <a href="Singleton.html">Singleteon Pattern</a>
+            <a href="Singleton.html">Singleton Pattern</a>
         </li>
         <li>
             <a href="StatePattern.html">State Pattern</a>
