added array implementation with generics of stack .

--- a/src/main/webapp/Algorithms/Algorithms.html
+++ b/src/main/webapp/Algorithms/Algorithms.html
@@ -26,7 +26,7 @@
 <article>
     <ul>
 
-        <li><a href="Searching.html">Stack ,Queue,Bag </a></li>
+        <li><a href="Searching.html">MyStack ,MyStack,Bag </a></li>
         <li><a href="Searching.html">Running time of an Algorithm, Various Notations Big(0) , omega(o) , tilda  </a></li>
         <li><a href="Searching.html">Searching</a></li>
         <li><a href="Sorting.html">Sorting Algorithms</a></li>
